syntax = "proto3";

package grpc;

option go_package = "github.com/FranZk9/lab3Distribuidos/proto";

message Mensaje {
    string nombre = 1;
}

message CommandAddUpdate{
    string nombre_sector = 1;
    string nombre_base = 2;
    string valor = 3;
}
message CommandRename{
    string nombre_sector = 1;
    string nombre_base = 2;
    string nuevo_nombre = 3;
}
message CommandDelete{
    string nombre_sector = 1;
    string nombre_base = 2;    
}
message CommandGet{
    string nombre_sector = 1;
    string nombre_base = 2;    
}

service MessageService {
    rpc Intercambio (Mensaje) returns (Mensaje);    
    rpc AgregarBase(CommandAddUpdate) returns (Mensaje);
    rpc RenombrarBase(CommandRename) returns (Mensaje);
    rpc ActualizarValor(CommandAddUpdate) returns (Mensaje);
    rpc BorrarBase(CommandDelete) returns (Mensaje);
    rpc GetSoldados(CommandGet) returns (Mensaje);    
}